feat(customer): support send gift cart flow
